# k0s.media.server

./: .gitignore  Makefile  k0sctl.yaml  kustomization.yaml  porkbun.download.certs.sh
bases/: kustomization.yaml  namespaces.yaml
bases/calibre/: deployment.yaml  kustomization.yaml
bases/jackett/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
bases/jellyfin/: deployment.yaml  ingress.yaml  service.yaml
bases/jobs/: porkbun.dns.update.yaml  update.music.videos.yaml
bases/lidarr/: deployment.yaml  ingress.yaml  service.yaml
bases/longhorn/: ingress.yaml  kustomization.yaml  longhorn
bases/monitoring/: kube-state-metrics.yaml  kustomization.yaml  loki.yaml  node-exporter.yaml  prometheus.yaml
bases/mylar/: deployment.yaml  ingress.yaml
bases/nzbget/: deployment.yaml  ingress.yaml  kustomization.yaml
bases/nzbhydra/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
bases/openebs/: blockdeviceclaims.openebs.io-crd.yaml  blockdevices.openebs.io-crd.yaml  kustomization.yaml  maya-apiserver-deployment.yaml  maya-apiserver-service-svc.yaml  openebs-admission-server-deployment.yaml  openebs-localpv-provisioner-deployment.yaml  openebs-maya-operator-cr.yaml  openebs-maya-operator-crb.yaml  openebs-maya-operator-sa.yaml  openebs-namespace.yaml  openebs-ndm-config-cm.yaml  openebs-ndm-daemonset.yaml  (+3 more)
containers/porkbun-dns-updater/: Cargo.toml  Dockerfile
containers/porkbun-dns-updater/src/: cli.rs  dns.rs  lib.rs  main.rs
docs/: README.md  raspberry.pi.cluster.md
patches.json/: resource.limits.large.yaml
(+131 files in other folders)
