[package]
authors = ["Nic Patterson <nic@reynn.dev>"]
edition = "2018"
name    = "porkbun-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = "1.0"
async-trait = "0.1"
log         = "0.4"
reqwest     = { version = "0.11", features = ["json"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
simplelog   = "0.10"
structopt   = "0.3"
tokio       = { version = "1.7", features = ["full"] }
url         = "2.2"
